<resources>
    <string name="app_name">simple-background-work</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="stop_foreground_service">Stop Foreground Service</string>
    <string name="send_action_bound_service">Send Action Bound Service</string>
    <string name="start_intent_service">Start IntentService</string>
    <string name="start_job_intent_service">Start JobIntentService</string>
    <string name="start_one_time_worker">Start OneTimeWorker</string>
    <string name="start_periodic_worker">Start PeriodicWorker</string>
    <string name="cancel_all_workers">Cancel All Workers</string>
</resources>