<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_start_simple_service"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/start_service" />

            <Button
                android:id="@+id/btn_stop_simple_service"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/stop_service" />
        </LinearLayout>

        <View style="@style/ViewStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_start_foreground_service"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/start_foreground_service" />

            <Button
                android:id="@+id/btn_stop_foreground_service"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/stop_foreground_service" />
        </LinearLayout>

        <View style="@style/ViewStyle" />

        <Button
            android:id="@+id/btn_send_action_bound_service"
            style="@style/ButtonStyle"
            android:text="@string/send_action_bound_service" />

        <View style="@style/ViewStyle" />

        <Button
            android:id="@+id/btn_start_intent_service"
            style="@style/ButtonStyle"
            android:text="@string/start_intent_service" />

        <View style="@style/ViewStyle" />

        <Button
            android:id="@+id/btn_start_job_intent_service"
            style="@style/ButtonStyle"
            android:text="@string/start_job_intent_service" />

        <View style="@style/ViewStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_start_one_time_worker"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/start_one_time_worker" />

            <Button
                android:id="@+id/btn_start_periodic_worker"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/start_periodic_worker" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel_all_workers"
            style="@style/ButtonStyle"
            android:text="@string/cancel_all_workers" />
    </LinearLayout>
</ScrollView>